--- a/docker-compose/nginx/demo.conf
+++ b/docker-compose/nginx/demo.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    root /var/www/public;
+    root /var/www;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
